--- a/Grimoire/Pages/Components/ScriptList.razor
+++ b/Grimoire/Pages/Components/ScriptList.razor
@@ -3,6 +3,6 @@
 <div>
     @foreach (ScriptBlock script in scripts)
     {
-        <ScriptBlockItemBase ScriptBlock="@script" />
+        <ScriptBlockItem ScriptBlock="@script" />
     }
 </div>
