--- a/Grimoire/Pages/_Host.cshtml
+++ b/Grimoire/Pages/_Host.cshtml
@@ -16,6 +16,8 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
+    <header>
+    </header>
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
