--- a/Grimoire/Pages/Components/ScriptList.razor
+++ b/Grimoire/Pages/Components/ScriptList.razor
@@ -1,7 +1,7 @@
 ﻿@inherits ScriptListBase
 
 <div>
-    @foreach (ScriptBlock script in scripts)
+    @foreach (GrimoireScriptBlock script in scripts)
     {
         <ScriptBlockItem ScriptBlock="@script" />
     }
