--- a/Grimoire/Shared/MainLayout.razor
+++ b/Grimoire/Shared/MainLayout.razor
@@ -1,4 +1,7 @@
 ﻿@inherits LayoutComponentBase
+<div class="sidebar">
+    <SideMenu></SideMenu>
+</div>
 <div class="main">
     <div class="content px-4">
         @Body
