--- a/Grimoire/_Imports.razor
+++ b/Grimoire/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.JSInterop
 @using Grimoire
 @using Grimoire.Shared
-@using Grimoire.Pages.Components
+@using Grimoire.Components
 @using Grimoire.Domain.Models
