--- a/Grimoire/Components/ScriptBlockItem.razor
+++ b/Grimoire/Components/ScriptBlockItem.razor
@@ -5,9 +5,53 @@
     </div>
     <div class="card-body">
         <div class="row">
-            <div class="col-8">Information</div>
-            <div class="col-2">Action</div>
-            <div class="col-2">Status</div>
+            <div class="col-sm-1">
+                <span class="oi oi-info"></span>
+            </div>
+            <div class="col-sm-8">
+            </div>
+            @if (ScriptBlock.LastResult != null && ScriptBlock.LastResult.ResultType != ResultType.None)
+            {
+                <div class="col-sm-1">
+                    @switch (ScriptBlock.LastResult.ResultType)
+                    {
+                        case ResultType.Success:
+                            <span class="btn btn-primary rounded-circle bg-success">
+                                <span class="oi oi-check"></span>
+                            </span>
+                            break;
+                        case ResultType.Error:
+                            <span class="btn btn-primary rounded-circle bg-danger">
+                                <span class="oi oi-x"></span>
+                            </span>
+                            break;
+                        case ResultType.Warning:
+                            <span class="btn btn-primary rounded-circle bg-warning">
+                                <span class="oi oi-warning"></span>
+                            </span>
+                            break;
+                    }
+                </div>
+            }
+            <div class="col-sm-1">
+                <button class="btn btn-primary rounded-circle" @onclick="EditScript">
+                    <span class="oi oi-script"></span>
+                </button>
+            </div>
+            <div class="col-sm-1">
+                @if (!Executing)
+                {
+                    <button class="btn btn-primary rounded-circle" @onclick="RunScript">
+                        <span class="oi oi-media-play"></span>
+                    </button>
+                }
+                else
+                {
+                    <div class="spinner-border rounded-circle text-primary" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
