--- a/Grimoire/Components/SideMenu.razor
+++ b/Grimoire/Components/SideMenu.razor
@@ -1,27 +1,18 @@
 ﻿@inherits SideMenuBase
-<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Grimoire</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="editScript">
-                <span class="oi oi-script" aria-hidden="true"></span> New Script
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="config">
-                <span class="oi oi-cog" aria-hidden="true"></span> Configuration
-            </NavLink>
-        </li>
-    </ul>
+<div class="container">
+    <div class="row nav-item">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <span class="oi oi-list" aria-hidden="true"></span>
+        </NavLink>
+    </div>
+    <div class="row nav-item">
+        <NavLink class="nav-link" href="editScript">
+            <span class="oi oi-plus rounded" aria-hidden="true"></span>
+        </NavLink>
+    </div>
+    <div class="row nav-item">
+        <NavLink class="nav-link" href="config">
+            <span class="oi oi-cog" aria-hidden="true"></span>
+        </NavLink>
+    </div>
 </div>
