--- a/Grimoire/Pages/Index.razor
+++ b/Grimoire/Pages/Index.razor
@@ -7,6 +7,7 @@
         @foreach (GrimoireScriptBlock script in scripts)
         {
             <ScriptBlockItem ScriptBlock="@script" />
+            <div class="mb-2" />
         }
     }
     else
