--- a/Grimoire/Components/ScriptBlockItem.razor
+++ b/Grimoire/Components/ScriptBlockItem.razor
@@ -9,10 +9,11 @@
                 <span class="oi oi-info"></span>
             </div>
             <div class="col-sm-8">
+                @Info
             </div>
-            @if (ScriptBlock.LastResult != null && ScriptBlock.LastResult.ResultType != ResultType.None)
-            {
-                <div class="col-sm-1">
+            <div class="col-sm-1">
+                @if (ScriptBlock.LastResult != null && ScriptBlock.LastResult.ResultType != ResultType.None)
+                {
                     @switch (ScriptBlock.LastResult.ResultType)
                     {
                         case ResultType.Success:
@@ -31,8 +32,8 @@
                             </span>
                             break;
                     }
-                </div>
-            }
+                }
+            </div>
             <div class="col-sm-1">
                 <button class="btn btn-primary rounded-circle" @onclick="EditScript">
                     <span class="oi oi-script"></span>
@@ -48,7 +49,7 @@
                 else
                 {
                     <div class="spinner-border rounded-circle text-primary" role="status">
-                        <span class="sr-only">Loading...</span>
+                        <span class="sr-only">Running...</span>
                     </div>
                 }
             </div>
