--- a/Grimoire/Components/ScriptBlockItem.razor
+++ b/Grimoire/Components/ScriptBlockItem.razor
@@ -1,69 +1,58 @@
 ﻿@inherits ScriptBlockItemBase
-<div class="card">
-    <div class="card-header">
-        @ScriptBlock.Description
-    </div>
-    <div class="card-body">
-        <div class="row">
-            <div class="col-sm-1">
-                <span class="oi oi-code"></span>
-            </div>
-            <div class="col-sm-8">
-                @Info
-            </div>
-            <div class="col-sm-1">
-                @if (ScriptBlock.LastResult != null && ScriptBlock.LastResult.ResultType != ResultType.None)
+
+<div class="card container script-item">
+    <div class="row">
+        <div class="col-sm-2">
+            @if (!ScriptBlockRunner.IsRunning)
+            {
+                @if (ScriptBlockRunner.ScriptBlock.LastResult != null && ScriptBlockRunner.ScriptBlock.LastResult.ResultType != ResultType.None)
                 {
-                    @switch (ScriptBlock.LastResult.ResultType)
+                    @switch (ScriptBlockRunner.ScriptBlock.LastResult.ResultType)
                     {
                         case ResultType.Success:
-                            <span class="btn btn-primary rounded-circle bg-success">
-                                <span class="oi oi-check"></span>
+                            <span class="btn btn-sm rounded-circle bg-success mt-2">
+                                <span class="oi oi-check small-simbol"></span>
                             </span>
                             break;
                         case ResultType.Error:
-                            <span class="btn btn-primary rounded-circle bg-danger">
-                                <span class="oi oi-x"></span>
+                            <span class="btn btn-sm rounded-circle bg-danger mt-2">
+                                <span class="oi oi-x small-simbol"></span>
                             </span>
                             break;
                         case ResultType.Warning:
-                            <span class="btn btn-primary rounded-circle bg-warning">
-                                <span class="oi oi-warning"></span>
+                            <span class="btn btn-sm rounded-circle bg-warning mt-2">
+                                <span class="oi oi-warning small-simbol"></span>
                             </span>
                             break;
                     }
                 }
+            }
+            else
+            {
+                <div class="spinner-border rounded-circle text-primary mt-2" role="status">
+                    <span class="sr-only small-simbol">Running...</span>
+                </div>
+            }
+        </div>
+        <div class="col-sm-8">
+            <div class="row">
+                <div class="col-sm-12">
+                    @ScriptBlockRunner.ScriptBlock.Description
+                </div>
             </div>
-            <div class="col-sm-1">
-                <button class="btn btn-primary rounded-circle" @onclick="EditScript">
-                    <span class="oi oi-script"></span>
-                </button>
-            </div>
-            <div class="col-sm-1">
-                @if (!Executing)
-                {
-                    <button class="btn btn-primary rounded-circle" @onclick="RunScript">
-                        <span class="oi oi-media-play"></span>
-                    </button>
-                }
-                else
-                {
-                    <div class="spinner-border rounded-circle text-primary" role="status">
-                        <span class="sr-only">Running...</span>
-                    </div>
-                }
+            <div class="row">
+                <div class="col-sm-12">
+                    @Info
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-1">
-                <span class="oi oi-info"></span>
-            </div>
-            <div class="col-sm-11">
-                @if (ScriptBlock.LastResult != null && ScriptBlock.LastResult.FilteredResult != null)
-                {
-                    @ScriptBlock.LastResult.FilteredResult
-                }
-            </div>
+        <div class="col-sm-2">
+            @if (!ScriptBlockRunner.IsRunning)
+            {
+                <button class="btn btn-primary btn-sm rounded-circle mt-2 mr-2" @onclick="RunScript">
+                    <span class="oi oi-media-play small-simbol"></span>
+                </button>
+            }
         </div>
     </div>
 </div>
