--- a/Grimoire/Components/ScriptBlockItem.razor
+++ b/Grimoire/Components/ScriptBlockItem.razor
@@ -1,7 +1,10 @@
 ﻿@inherits ScriptBlockItemBase
 
-<div class="card container script-item">
+<div class="card container script-item mr-1 ml-1" @onclick="SelectScript">
     <div class="row">
+        <div class="col-sm-10 item-text">
+            @ScriptBlockRunner.ScriptBlock.Description
+        </div>
         <div class="col-sm-2">
             @if (!ScriptBlockRunner.IsRunning)
             {
@@ -10,48 +13,20 @@
                     @switch (ScriptBlockRunner.ScriptBlock.LastResult.ResultType)
                     {
                         case ResultType.Success:
-                            <span class="btn btn-sm rounded-circle bg-success mt-2">
-                                <span class="oi oi-check small-simbol"></span>
-                            </span>
+                            <img class="small-simbol" src="./images/ok.svg" />
                             break;
                         case ResultType.Error:
-                            <span class="btn btn-sm rounded-circle bg-danger mt-2">
-                                <span class="oi oi-x small-simbol"></span>
-                            </span>
+                            <img class="small-simbol" src="./images/error.svg" />
                             break;
                         case ResultType.Warning:
-                            <span class="btn btn-sm rounded-circle bg-warning mt-2">
-                                <span class="oi oi-warning small-simbol"></span>
-                            </span>
+                            <img class="small-simbol" src="./images/warning.svg" />
                             break;
                     }
                 }
             }
             else
             {
-                <div class="spinner-border rounded-circle text-primary mt-2" role="status">
-                    <span class="sr-only small-simbol">Running...</span>
-                </div>
-            }
-        </div>
-        <div class="col-sm-8">
-            <div class="row">
-                <div class="col-sm-12">
-                    @ScriptBlockRunner.ScriptBlock.Description
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    @Info
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            @if (!ScriptBlockRunner.IsRunning)
-            {
-                <button class="btn btn-primary btn-sm rounded-circle mt-2 mr-2" @onclick="RunScript">
-                    <span class="oi oi-media-play small-simbol"></span>
-                </button>
+                <img class="small-simbol-running" role="status" src="./images/running.svg" />
             }
         </div>
     </div>
