--- a/Grimoire/Components/SideMenu.razor
+++ b/Grimoire/Components/SideMenu.razor
@@ -1,18 +1,32 @@
 ﻿@inherits SideMenuBase
 <div class="container">
     <div class="row nav-item">
-        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-            <span class="oi oi-list" aria-hidden="true"></span>
-        </NavLink>
+        <div class="col-sm-2">
+            <img src="images/Icon.png" class="grimoire-logo" />
+        </div>
+        <div class="col-sm-10">
+            <h2 class="grimoire-title">Grimoire</h2>
+        </div>
     </div>
     <div class="row nav-item">
-        <NavLink class="nav-link" href="editScript">
-            <span class="oi oi-plus rounded" aria-hidden="true"></span>
-        </NavLink>
+        <div class="script-list">
+            @if (Business.ScriptRunners != null)
+            {
+                @foreach (IGrimoireRunner script in Business.ScriptRunners)
+                {
+                    <ScriptBlockItem @ref="ItemRef" ScriptBlockRunner="@script" />
+                    <div class="mb-2" />
+                }
+            }
+            else
+            {
+                <div>Loading...</div>
+            }
+        </div>
     </div>
-    <div class="row nav-item">
-        <NavLink class="nav-link" href="config">
-            <span class="oi oi-cog" aria-hidden="true"></span>
-        </NavLink>
+    <div class="row">
+        <div class="mx-auto">
+            <img class="big-simbol button ml-0" src="./images/add.svg" @onclick="AddNewScript" />
+        </div>
     </div>
 </div>
