--- a/Grimoire/Pages/_Host.cshtml
+++ b/Grimoire/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <script src="js/common.js"></script>
 </head>
 <body>
     <header>
