--- a/Grimoire/wwwroot/css/site.css
+++ b/Grimoire/wwwroot/css/site.css
@@ -2,6 +2,9 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #1e1e1e;
+    color: lightgray;
+    scrollbar-color: dark;
 }
 
 a, .btn-link {
@@ -55,8 +58,8 @@ app {
     }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-    width: 50px;
+    background-color: rgb(45, 45, 48);
+    width: 250px;
     height: 100vh;
     position: sticky;
     top: 0;
@@ -71,9 +74,9 @@ app {
     }
 
     .sidebar .oi {
-        width: 2rem;
+        width: 1rem;
         font-size: 1.1rem;
-        vertical-align: text-top;
+        vertical-align: bottom;
         top: -2px;
     }
 
@@ -108,22 +111,6 @@ app {
                 background-color: rgba(255,255,255,0.1);
                 color: white;
             }
-
-.content {
-    padding-top: 1.1rem;
-}
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
-}
 
 #blazor-error-ui {
     background: lightyellow;
@@ -163,10 +150,118 @@ app {
 }
 
 .small-simbol {
-    font-size: 8pt !important;
-    color: white;
+    width: 1rem;
+    height: 1rem;
 }
 
-.script-item:hover {
-    background-color: dodgerblue;
+.small-simbol-running {
+    width: 1rem;
+    height: 1rem;
+    animation-name: spin;
+    animation-duration: 3000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
+
+.big-simbol {
+    width: 2rem;
+    height: 2rem;
+}
+
+.big-simbol-running {
+    width: 2rem;
+    height: 2rem;
+    animation-name: spin;
+    animation-duration: 3000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.script-item {
+    height: 25px;
+    width: 240px;
+    cursor: pointer;
+    background-color: #3e3e42;
+}
+
+    .script-item:hover {
+        background-color: #7a7a82;
+    }
+
+.item-text {
+    padding-top: 2px;
+}
+
+.grimoire-title {
+    color: white;
+    align-self: center center;
+}
+
+.grimoire-logo {
+    height: 30px;
+    align-self: center center;
+}
+
+.script-title {
+    margin-left: 0px;
+    margin-right: auto;
+    padding-left: 0px;
+}
+
+.button {
+    cursor: pointer;
+}
+
+.line {
+    background-color: #333333;
+    height: 2px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.spacer-h-10 {
+    height: 10px;
+}
+
+.result-text {
+    border: none;
+    background-color: #2a2a2c;
+    color: lightgray;
+    height: 150px;
+    min-height 150px;
+}
+
+.button-submit {
+    background-color: transparent;
+    border:none;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #3e3e42;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #686868;
+}
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #969696;
+    }
