--- a/Grimoire/Components/ScriptEdit.razor
+++ b/Grimoire/Components/ScriptEdit.razor
@@ -100,7 +100,7 @@
     <div class="row">
         <ValidationSummary />
     </div>
-    <button type="submit" class="button-submit rounded">
+    <button type="submit" class="button-submit rounded-circle">
         <img class="big-simbol button" src="./images/save.svg" />
     </button>
 </EditForm>
